--- a/app.json
+++ b/app.json
@@ -1,11 +1,10 @@
 {
   "expo": {
-    "name": "calculadora",
+    "name": "Calculadora",
     "slug": "calculadora",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,7 +12,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#01bb92"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -22,7 +21,12 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nastassja.calculadora"
+    },
+    "android": {
+      "package": "com.nastassja.calculadora",
+      "versionCode": 1
     }
   }
 }
